--- a/html/authorization.html
+++ b/html/authorization.html
@@ -8,11 +8,11 @@
 <body>
     <div class="background-wrapper">
         <div class="block-autorization">
-            <form class="form-login" method="post" enctype="text/plain" id="write_data">
+            <form class="form-login" method="post" enctype="text/plain" id="t_data">
                 <span class="autho">Authorization</span>
-                <input type="email" class="login" required="" autofocus="" placeholder="Login" name="write_data">
-                <input type="password" maxlength="100" required class="password" placeholder="Password" name="write_data">
-                <input type="submit" class="to-send" value="SIGN IN" id="send_data" form="write_data">
+                <input type="email" class="login" required="" autofocus="" placeholder="Login" name=" ">
+                <input type="password" maxlength="100" required class="password" placeholder="Password" name=" ">
+                <input type="submit" class="to-send" value="SIGN IN" id="send_data" form="t_data">
             </form>
         </div>
     </div>
