--- a/html/chat.html
+++ b/html/chat.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Chat</title>
+
 <link rel="stylesheet" href="chat.css">
 
 </head>
@@ -12,10 +13,10 @@
     <div class="wrapper-top-menu">
         <div class="top_menu">
         <ul class="ul_top_menu">
-            <li><a class="li_top_menu" href="wiki.html">WIKI</a></li>
             <li><a class="li_top_menu" href="index.html">HOME</a></li>
-            <li><a class="li_top_menu" href="code.html">CODE</a></li>
+            <li><a class="li_top_menu" href="https://github.com/Cempl/http-server-ws" target="_blank">CODE</a></li>
             <li><a class="li_top_menu" href="contact.html">CONTACT</a></li> 
+            <li><a class="li_top_menu" href="faq.html">FAQ</a></li>
         </ul>
     </div>
     </div>
@@ -27,7 +28,7 @@
         </form>
         <form id="message_test">
                 <textarea class="form-write-massage" placeholder="Write message..." cols="70" wrap="hard" autofocus="" required="" maxlength="400" name="message" id="this_message"></textarea>
-                <input type="submit" form="message_test" class="send-message" id="key_send_message">
+                <button form="message_test" class="button-send-message">Send</button>
         </form>
         </div>
     </div>
