--- a/html/faq.html
+++ b/html/faq.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Contact</title>
-<link href="contact.css" rel="stylesheet" type="text/css">
+<title>FAQ</title>
+<link href="faq.css" rel="stylesheet" type="text/css">
 <link href="authorization.css" rel="stylesheet" type="text/css">
 </head>	
 <body>
@@ -14,7 +14,7 @@
 				<li><a class="li_top_menu" href="index.html">HOME</a></li>
 				<li><a class="li_top_menu" href="#login_form" id="login_pop">CHAT</a></li>
             	<li><a class="li_top_menu" href="https://github.com/Cempl/http-server-ws"  target="_blank">CODE</a></li>
-           	 	<li><a class="li_top_menu" href="faq.html">FAQ</a></li> 
+           	 	<li><a class="li_top_menu" href="contact.html">CONTACT</a></li> 
 				</ul>
 			</div>
 		</div>
