add parsing page name, some repair, fix send empty msg, add comments

--- a/x64/Debug/html/chat.html
+++ b/x64/Debug/html/chat.html
@@ -31,7 +31,7 @@
             <textarea class="input-message"  wrap="hard" readonly="" placeholder="Beta" id="input-message"></textarea>
         </form>
         <form id="message_test">
-                <textarea class="form-write-massage" placeholder="Write message..." cols="70" wrap="hard" autofocus="" required="" maxlength="800" name="message" id="this_message"></textarea>
+                <textarea id="message" class="form-write-massage" spellcheck="true" placeholder="Write message..." cols="70" wrap="hard" autofocus="" required="" maxlength="800" name="message" id="this_message"></textarea>
                 <button form="message_test" class="button-send-message">Send</button>
         </form>
         </div>
