--- a/x64/Debug/html/index.html
+++ b/x64/Debug/html/index.html
@@ -13,6 +13,13 @@
     <script type="text/javascript" src="encryption.js"></script>
 
 <body>
+
+<noscript>
+    <div class="d-js">
+        <div class="d-js-content">You disabled JavaScript. You must enable it to function correctly!</div>
+    </div>
+</noscript>
+
 	<div class="font-wrapper">
 <div class="wrapper">
 	<div class="top_menu">
@@ -62,8 +69,8 @@
 </div>
 
  <a href="#x" class="overlay" id="login_form"></a>
-
-        <div class="popup">
+                    
+        <div id="close-popup" class="popup">
 
              <div class="tabs">
 
