added support openss

--- a/x64/Debug/html/FullHome.html
+++ b/x64/Debug/html/FullHome.html
@@ -1,26 +1,3 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Home</title>
-<link href="index.css" rel="stylesheet">
-<link href="chat.css" rel="stylesheet">
-<link href="authorization.css" rel="stylesheet">
-</head>	
-
-    <script type="text/javascript" src="jquery_min.js"></script>
-    <script type="text/javascript" src="loadContent.js"></script>
-    <script type="text/javascript" src="sha512min.js"></script>
-    
-<body>
-
-<noscript>
-    <div class="d-js">
-        <div class="d-js-content">You disabled JavaScript. You must enable it to function correctly!</div>
-    </div>
-</noscript>
-
-	<div id="chatBody" class="font-wrapper">
 <div class="wrapper">
 	<div class="top_menu">
         <ul class="ul_top_menu">
@@ -47,11 +24,11 @@
 		<div class="circle-cen">
             <div class="text-col-cen">FAQ</div>
             <p class="text-config">
-                • How to start<br>
-                • How to compile<br>  
-                • What is a secret chat<br>  
+                • How to start?<br>
+                • How to compile?<br>  
+                • What is a secret chat?<br>  
                 • Starting a secret chat<br>            
-                • Why should I trust you<br>             
+                • Why should I trust you?<br>             
                 • Creating a group
             </p>
             </div>
@@ -67,9 +44,3 @@
     <div class="footer-size">
         <div class="footer-text">Copyright 2016 Beta Project</div>
     </div>
-</div>
-
-    <script type="text/javascript" src="index.js"></script>
-
-</body>
-</html>
