--- a/x64/Debug/html/chat.html
+++ b/x64/Debug/html/chat.html
@@ -1,28 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Chat</title>
-
-    <link rel="stylesheet" href="chat.css">
-    <script type="text/javascript" src="jquery_min.js"></script>
-
-</head>
-
-<body>
-
-    <div class="wrapper-size">
-    
-    <div class="wrapper-top-menu">
-        <div class="top_menu">
-        <ul class="ul_top_menu">
-            <li><a class="li_top_menu" href="index.html">HOME</a></li>
-            <li><a class="li_top_menu" href="https://github.com/Cempl/http-server-ws" target="_blank">CODE</a></li>
-        </ul>
-    </div>
-    </div>
-    <div class="left">
-        <div class="inc-mes-size">
         <form id="inc_message">
             <div class="first-legend">Chat information</div>
             <div id="name_in_chat" class="first-legend">Your name in chat: </div>
@@ -30,18 +5,7 @@
             <div id="errors_ws" class="first-legend">Errors: </div>
             <textarea class="input-message"  wrap="hard" readonly="" placeholder="Beta" id="input-message"></textarea>
         </form>
-        <form id="message_test">
-                <textarea id="message" class="form-write-massage" spellcheck="true" placeholder="Write message..." cols="70" wrap="hard" autofocus="" required="" maxlength="800" name="message" id="this_message"></textarea>
-                <button form="message_test" class="button-send-message">Send</button>
+        <form id="message_test" class="form-send">
+                <textarea id="message" class="form-write-massage" spellcheck="true" placeholder="Write message..." cols="70" wrap="hard" autofocus="" required="" maxlength="800" name="message"></textarea>
         </form>
-        </div>
-    </div>
-    <div class="right">
-        
-    </div>
-</div>
-
-    <script type="text/javascript" src="chat.js"></script>
-
-</body>
-</html>
+                <button form="message_test" class="button-send-message">Send</button>
