--- a/x64/Debug/html/home.html
+++ b/x64/Debug/html/home.html
@@ -13,11 +13,11 @@
 		<div class="circle-cen">
             <div class="text-col-cen">FAQ</div>
             <p class="text-config">
-                • How to start?<br>
-                • How to compile?<br>  
-                • What is a secret chat?<br>  
-                • Starting a secret chat<br>            
-                • Why should I trust you?<br>             
+                • How to start<br>
+                • How to compile<br>  
+                • What is a secret chat<br>  
+                • Starting a secret cha<br>            
+                • Why should I trust you<br>             
                 • Creating a group
             </p>
             </div>
