--- a/x64/Debug/html/FullHome.html
+++ b/x64/Debug/html/FullHome.html
@@ -24,11 +24,11 @@
 		<div class="circle-cen">
             <div class="text-col-cen">FAQ</div>
             <p class="text-config">
-                • How to start?<br>
-                • How to compile?<br>  
-                • What is a secret chat?<br>  
+                • How to start<br>
+                • How to compile<br>  
+                • What is a secret chat<br>  
                 • Starting a secret chat<br>            
-                • Why should I trust you?<br>             
+                • Why should I trust you<br>             
                 • Creating a group
             </p>
             </div>
