--- a/x64/Debug/html/authorization.html
+++ b/x64/Debug/html/authorization.html
@@ -3,7 +3,7 @@
 <div class="wrapper">
 	<div class="top_menu">
         <ul class="ul_top_menu">
-            <li><a style="cursor: pointer" onclick="showContent('reloadFullHome')" class="li_top_menu">HOME</a></li>
+            <li><a style="cursor: pointer" onclick="showContent('reloadfullhome')" class="li_top_menu">HOME</a></li>
             <li><a style="cursor: pointer" onclick="showContent('authorization.html')" class="li_top_menu">SIGN IN</a></li>
             <li><a class="li_top_menu" href="https://github.com/Cempl/http-server-ws" target="_blank">CODE</a></li>
         </ul>
