rename func, some repair, rework ParseDataFromWebSocket()

--- a/x64/Debug/html/chat.html
+++ b/x64/Debug/html/chat.html
@@ -5,6 +5,6 @@
             <textarea class="input-message"  wrap="hard" readonly="" placeholder="Beta" id="input-message"></textarea>
         </form>
         <form id="message_test" class="form-send">
-                <textarea id="message" class="form-write-massage" spellcheck="true" placeholder="Write message..." cols="70" wrap="hard" autofocus="" required="" maxlength="800" name="message"></textarea>
+                <textarea id="message" class="form-write-massage" spellcheck="true" placeholder="Write message..." cols="70" wrap="hard" autofocus required="" maxlength="800" name="message"></textarea>
         </form>
                 <button form="message_test" class="button-send-message">Send</button>
