rework ParseDataFromWebSocket(), rework interface

--- a/x64/Debug/html/chat.html
+++ b/x64/Debug/html/chat.html
@@ -1,8 +1,8 @@
         <form id="inc_message">
-            <div class="first-legend">Chat information</div>
-            <div id="connection" class="first-legend">Connect: </div>
-            <div id="errors_ws" class="first-legend">Errors: </div>
-            <textarea class="input-message"  wrap="hard" readonly="" placeholder="Beta" id="input-message"></textarea>
+            <span class="first-legend">Chat information</span>
+            <span id="connection" class="first-legend">Connect: </span>
+            <span id="errors_ws" class="first-legend">Errors: </span>
+            <div class="input-message"  wrap="hard" readonly="" placeholder="Beta" id="input-message"></div>
         </form>
         <form id="message_test" class="form-send">
                 <textarea id="message" class="form-write-massage" spellcheck="true" placeholder="Write message..." cols="70" wrap="hard" autofocus required="" maxlength="800" name="message"></textarea>
